deploy: 63de87cd93e769db1078e641d42414a5ee7c32ed

--- a/donate/long.html
+++ b/donate/long.html
@@ -7,15 +7,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.235102df.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.d10125ec.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.9ca07406.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.e7cc1878.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.b61b209a.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.5d16974e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.cb3c47d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.5c98ecff.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.43827d44.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d3f6dcbf.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.c7621673.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.616b3b9e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.0cac90d5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.6c87ffbf.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.2b591492.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.f246d496.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.ccf10d90.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
@@ -48,7 +48,7 @@
 			
 			<script>
 				{
-					__sveltekit_13zcg1c = {
+					__sveltekit_1asn5f = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -57,10 +57,10 @@
 					const data = [{"type":"data","data":null,"uses":{}},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.9ca07406.js"),
-						import("../_app/immutable/entry/app.5c98ecff.js")
+						import("../_app/immutable/entry/start.e7cc1878.js"),
+						import("../_app/immutable/entry/app.d3f6dcbf.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_13zcg1c.element, {
+						kit.start(app, __sveltekit_1asn5f.element, {
 							node_ids: [0, 2, 7],
 							data,
 							form: null,
