--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<link href="./_app/immutable/assets/_layout.235102df.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.d10125ec.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.9ca07406.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e7cc1878.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.b61b209a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5d16974e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.cb3c47d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5c98ecff.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.43827d44.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d3f6dcbf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.c7621673.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.616b3b9e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.6c87ffbf.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.e2db76de.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.ccf10d90.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
 	</head>
@@ -93,7 +93,7 @@
 			
 			<script>
 				{
-					__sveltekit_13zcg1c = {
+					__sveltekit_1asn5f = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -102,10 +102,10 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.9ca07406.js"),
-						import("./_app/immutable/entry/app.5c98ecff.js")
+						import("./_app/immutable/entry/start.e7cc1878.js"),
+						import("./_app/immutable/entry/app.d3f6dcbf.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_13zcg1c.element, {
+						kit.start(app, __sveltekit_1asn5f.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
