--- a/donate/alfabank.html
+++ b/donate/alfabank.html
@@ -7,15 +7,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.235102df.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.2b780c40.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.e7cc1878.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.0bebfe82.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.b61b209a.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.cb3c47d5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.0b15e272.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.d3f6dcbf.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.c7621673.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.6a2f7d03.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.0c8fb018.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.6c87ffbf.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.2b591492.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.646502b1.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.a3344494.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.3f3bec1c.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.835184a0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.73e3b557.js">
@@ -47,7 +47,7 @@
 			
 			<script>
 				{
-					__sveltekit_1asn5f = {
+					__sveltekit_rklka8 = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -56,10 +56,10 @@
 					const data = [{"type":"data","data":null,"uses":{}},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.e7cc1878.js"),
-						import("../_app/immutable/entry/app.d3f6dcbf.js")
+						import("../_app/immutable/entry/start.0bebfe82.js"),
+						import("../_app/immutable/entry/app.6a2f7d03.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1asn5f.element, {
+						kit.start(app, __sveltekit_rklka8.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
