--- a/donate/once.html
+++ b/donate/once.html
@@ -7,16 +7,16 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.235102df.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.d10125ec.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.e7cc1878.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.0bebfe82.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.b61b209a.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.cb3c47d5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.0b15e272.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.d3f6dcbf.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.c7621673.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.6a2f7d03.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.0c8fb018.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.6c87ffbf.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.2b591492.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-once-page.svelte.f91220b4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.646502b1.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.a3344494.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-once-page.svelte.03782d57.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.ccf10d90.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/once"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/once"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
 	</head>
@@ -27,15 +27,15 @@
 <div class="grid-container svelte-1l7puus"><div class="main-content svelte-1l7puus">
 <h1>Разовое пожертвование</h1>
 
-<ul><li><a href="/donate/sber" class=" svelte-u591i0" target="_self">Сбер
+<ul><li><a href="./sber" class=" svelte-u591i0" target="_self">Сбер
 </a>
-		</li><li><a href="/donate/tinkoff" class=" svelte-u591i0" target="_self">Тинькофф
+		</li><li><a href="./tinkoff" class=" svelte-u591i0" target="_self">Тинькофф
 </a>
-		</li><li><a href="/donate/alfabank" class=" svelte-u591i0" target="_self">Альфа-Банк
+		</li><li><a href="./alfabank" class=" svelte-u591i0" target="_self">Альфа-Банк
 </a>
 		</li>
 
-	<li><a href="/donate/crypto" class=" svelte-u591i0" target="_self">Криптовалюты
+	<li><a href="./crypto" class=" svelte-u591i0" target="_self">Криптовалюты
 </a></li></ul></div>
 	<div class="footer svelte-1l7puus"><nav><a href="/" class="svelte-1jbku8w">Вернуться на главную</a></nav>
 		<ul class="svelte-kmqdty"><li><a href="https:/t.me/spblpr" target="_blank" aria-label="Telegram ЛПР Петербург" class="svelte-kmqdty"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#1d98dc" d="M0 0h42v42H0z"/><path fill="#d8e4ee" d="M18.236 26.982c-.494 0-.41-.187-.581-.658L16.2 21.535l11.2-6.644"/><path fill="#c1d7e5" d="M18.236 27.057c.382 0 .55-.174.764-.382l2.036-1.98-2.54-1.531"/><path fill="#fff" d="m18.506 23.193 6.155 4.547c.703.388 1.21.187 1.384-.652l2.506-11.806c.256-1.028-.392-1.495-1.064-1.19l-14.712 5.673c-1.004.403-.998.963-.183 1.212l3.776 1.179 8.74-5.514c.413-.25.791-.116.48.16"/></g></svg><!-- HTML_TAG_END --></a></li>
@@ -51,7 +51,7 @@
 			
 			<script>
 				{
-					__sveltekit_1asn5f = {
+					__sveltekit_rklka8 = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -60,10 +60,10 @@
 					const data = [{"type":"data","data":null,"uses":{}},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.e7cc1878.js"),
-						import("../_app/immutable/entry/app.d3f6dcbf.js")
+						import("../_app/immutable/entry/start.0bebfe82.js"),
+						import("../_app/immutable/entry/app.6a2f7d03.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1asn5f.element, {
+						kit.start(app, __sveltekit_rklka8.element, {
 							node_ids: [0, 2, 8],
 							data,
 							form: null,
