--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.235102df.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout.baad5a4e.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.d10125ec.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0bebfe82.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bcb5eb8c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.b61b209a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0b15e272.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c9010bdf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.6a2f7d03.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.0c8fb018.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ec51faf8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.318808b4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.646502b1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.489edbeb.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.63d75129.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.ccf10d90.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
 	</head>
@@ -93,7 +93,7 @@
 			
 			<script>
 				{
-					__sveltekit_rklka8 = {
+					__sveltekit_2a5382 = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -102,10 +102,10 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0bebfe82.js"),
-						import("./_app/immutable/entry/app.6a2f7d03.js")
+						import("./_app/immutable/entry/start.bcb5eb8c.js"),
+						import("./_app/immutable/entry/app.ec51faf8.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_rklka8.element, {
+						kit.start(app, __sveltekit_2a5382.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
