deploy: c45cdf5a0c674d75d8d79f4268db8e338a48bd62

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 		<link href="./_app/immutable/assets/_layout.baad5a4e.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.d10125ec.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.e6145de3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.c1b57666.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.871577b9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a761dae4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.c4f5a426.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.30687581.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.61274f09.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.db7ed13c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.701b69b6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.a1e656f0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.8c7692e0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.d3d472ab.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.4c65f21c.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
 	</head>
 	<body>
@@ -73,7 +73,7 @@
 </svg><!-- HTML_TAG_END --></p>
 <p class="svelte-gy8nzu">Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!</p>
 
-<nav><a href="https://lp-russia.org/join" class=" svelte-u591i0" target="_self">Вступить
+<nav><a href="https://lp-russia.org/join" class=" svelte-u591i0" target="_blank">Вступить
 </a>
 	<a href="./donate" class=" svelte-u591i0" target="_self">Помочь деньгами
 </a>
@@ -92,7 +92,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ohyg6s = {
+					__sveltekit_j95s7v = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -101,10 +101,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.e6145de3.js"),
-						import("./_app/immutable/entry/app.c4f5a426.js")
+						import("./_app/immutable/entry/start.c1b57666.js"),
+						import("./_app/immutable/entry/app.61274f09.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1ohyg6s.element, {
+						kit.start(app, __sveltekit_j95s7v.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
