--- a/donate/crypto.html
+++ b/donate/crypto.html
@@ -7,15 +7,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.baad5a4e.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.d10125ec.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.e6145de3.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.c1b57666.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.871577b9.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.a761dae4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.c4f5a426.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.30687581.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.61274f09.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.db7ed13c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.701b69b6.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.180c8d16.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.8c7692e0.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.5149e7ce.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-crypto-page.svelte.55cde5a8.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.4c65f21c.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/crypto"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/crypto"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
@@ -46,7 +46,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ohyg6s = {
+					__sveltekit_j95s7v = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -55,10 +55,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.e6145de3.js"),
-						import("../_app/immutable/entry/app.c4f5a426.js")
+						import("../_app/immutable/entry/start.c1b57666.js"),
+						import("../_app/immutable/entry/app.61274f09.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1ohyg6s.element, {
+						kit.start(app, __sveltekit_j95s7v.element, {
 							node_ids: [0, 2, 6],
 							data,
 							form: null,
