--- a/donate/tinkoff.html
+++ b/donate/tinkoff.html
@@ -7,15 +7,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.baad5a4e.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.2b780c40.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.e6145de3.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.c1b57666.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.871577b9.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.a761dae4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.c4f5a426.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.30687581.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.61274f09.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.db7ed13c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.701b69b6.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.180c8d16.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.8c7692e0.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.5149e7ce.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.ef034390.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.835184a0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.73e3b557.js">
@@ -47,7 +47,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ohyg6s = {
+					__sveltekit_j95s7v = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -56,10 +56,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.e6145de3.js"),
-						import("../_app/immutable/entry/app.c4f5a426.js")
+						import("../_app/immutable/entry/start.c1b57666.js"),
+						import("../_app/immutable/entry/app.61274f09.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1ohyg6s.element, {
+						kit.start(app, __sveltekit_j95s7v.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
