--- a/donate/long.html
+++ b/donate/long.html
@@ -6,17 +6,18 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.c99ec6a0.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_page.49e12903.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.d10125ec.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.1114c9b5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.5ffef6ea.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.9055a0ca.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.9368db3c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.e798dc58.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.14c11e79.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.3f1bce16.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.69982bad.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.d6dea2ab.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.ca4495a6.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.a030ffc5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3fbf7e1d.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.78246671.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.7cbc2c32.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.4c65f21c.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
 	</head>
@@ -25,7 +26,7 @@
 
 
 <div class="grid-container svelte-1ajz6gp"><div class="main-content svelte-1ajz6gp">
-<h1>Регулярное пожертвование</h1>
+<h1 class="svelte-1s5foe9">Регулярное пожертвование</h1>
 
 <ul><li><a href="https://www.patreon.com/spblpr" class=" svelte-u591i0" target="_blank">Patreon
 			
@@ -33,7 +34,8 @@
 		</li><li><a href="https://boosty.to/spblpr" class=" svelte-u591i0" target="_blank">Boosty
 			
 </a>
-		</li></ul></div>
+		</li>
+</ul></div>
 	<div class="footer svelte-1ajz6gp"><nav><a href="http://sveltekit-prerender/" class="svelte-13mclog">Вернуться на главную</a></nav>
 		<ul class="svelte-kmqdty"><li><a href="https:/t.me/spblpr" target="_blank" aria-label="Telegram ЛПР Петербург" class="svelte-kmqdty"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#1d98dc" d="M0 0h42v42H0z"/><path fill="#d8e4ee" d="M18.236 26.982c-.494 0-.41-.187-.581-.658L16.2 21.535l11.2-6.644"/><path fill="#c1d7e5" d="M18.236 27.057c.382 0 .55-.174.764-.382l2.036-1.98-2.54-1.531"/><path fill="#fff" d="m18.506 23.193 6.155 4.547c.703.388 1.21.187 1.384-.652l2.506-11.806c.256-1.028-.392-1.495-1.064-1.19l-14.712 5.673c-1.004.403-.998.963-.183 1.212l3.776 1.179 8.74-5.514c.413-.25.791-.116.48.16"/></g></svg><!-- HTML_TAG_END --></a></li>
 	<li><a href="https:/twitter.com/spblpr" target="_blank" aria-label="Twitter ЛПР Петербург" class="svelte-kmqdty"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#69ace0" d="M0 0h42v42H0z"/><path fill="#fff" d="M27.667 16.333 29.333 16s-1.4 1.567-1.666 1.667c-.034.766 0 1 0 1-3.2 13.733-15 7.666-15 7.666 4.3.1 4.666-1.666 4.666-1.666-2.5-.367-3-2-3-2 .867.4 1.334-.334 1.334-.334-2.7-.7-2.334-3.333-2.334-3.333.467.4 1.2.567 1.634.633-.3-.366-2.834-3.4-1.3-4.966 0 0 1.866 3.333 6.766 3.633l.334-.067C20.7 18 20.7 17.767 20.7 17.5a3.5 3.5 0 0 1 3.5-3.5c2.333 0 2.833 1.333 2.833 1.333l1.667-1c-.033 0-.2 1.667-1.033 2z"/></g></svg><!-- HTML_TAG_END --></a></li>
@@ -48,7 +50,7 @@
 			
 			<script>
 				{
-					__sveltekit_1wlsl89 = {
+					__sveltekit_1vfp1ul = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -57,10 +59,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.1114c9b5.js"),
-						import("../_app/immutable/entry/app.e798dc58.js")
+						import("../_app/immutable/entry/start.5ffef6ea.js"),
+						import("../_app/immutable/entry/app.3f1bce16.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1wlsl89.element, {
+						kit.start(app, __sveltekit_1vfp1ul.element, {
 							node_ids: [0, 2, 7],
 							data,
 							form: null,
