--- a/donate/sber.html
+++ b/donate/sber.html
@@ -7,15 +7,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.c99ec6a0.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.2b780c40.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.1114c9b5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.5ffef6ea.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.9055a0ca.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.9368db3c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.e798dc58.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.14c11e79.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.3f1bce16.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.69982bad.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.d6dea2ab.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.ca4495a6.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3fbf7e1d.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.78246671.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.ef034390.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.835184a0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.73e3b557.js">
@@ -47,7 +47,7 @@
 			
 			<script>
 				{
-					__sveltekit_1wlsl89 = {
+					__sveltekit_1vfp1ul = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -56,10 +56,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.1114c9b5.js"),
-						import("../_app/immutable/entry/app.e798dc58.js")
+						import("../_app/immutable/entry/start.5ffef6ea.js"),
+						import("../_app/immutable/entry/app.3f1bce16.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1wlsl89.element, {
+						kit.start(app, __sveltekit_1vfp1ul.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
