--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<link href="./_app/immutable/assets/_layout.c99ec6a0.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.d10125ec.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.1114c9b5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.5ffef6ea.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9055a0ca.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9368db3c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.e798dc58.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.14c11e79.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3f1bce16.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.69982bad.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.d6dea2ab.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3fbf7e1d.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.d3d472ab.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.4c65f21c.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
 	</head>
@@ -92,7 +92,7 @@
 			
 			<script>
 				{
-					__sveltekit_1wlsl89 = {
+					__sveltekit_1vfp1ul = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -101,10 +101,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.1114c9b5.js"),
-						import("./_app/immutable/entry/app.e798dc58.js")
+						import("./_app/immutable/entry/start.5ffef6ea.js"),
+						import("./_app/immutable/entry/app.3f1bce16.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1wlsl89.element, {
+						kit.start(app, __sveltekit_1vfp1ul.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
