deploy: e3fa1f0b966a175a48cf8e962ac34fe9ec66598a

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<link href="./_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.b177587c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.a895e3dd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1b2c0e0e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.24fa1c4e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2fcb44b9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.cefe0698.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d3a213ee.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.cf57c859.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.1538b71b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.18e7e120.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.95b15931.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.c7d5d64f.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
 	</head>
@@ -92,7 +92,7 @@
 			
 			<script>
 				{
-					__sveltekit_1kv2f9b = {
+					__sveltekit_v7nw0t = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -101,10 +101,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.b177587c.js"),
-						import("./_app/immutable/entry/app.2fcb44b9.js")
+						import("./_app/immutable/entry/start.a895e3dd.js"),
+						import("./_app/immutable/entry/app.d3a213ee.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1kv2f9b.element, {
+						kit.start(app, __sveltekit_v7nw0t.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
