--- a/donate/zec.html
+++ b/donate/zec.html
@@ -7,15 +7,15 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.28c1e6e5.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.b177587c.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.a895e3dd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1b2c0e0e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.24fa1c4e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.2fcb44b9.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.cefe0698.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d3a213ee.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.cf57c859.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.1538b71b.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.daa581e8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.18e7e120.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.727ee4ec.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.3c8cf867.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.ca2e8e7b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.4e25ef50.js">
@@ -47,7 +47,7 @@
 			
 			<script>
 				{
-					__sveltekit_1kv2f9b = {
+					__sveltekit_v7nw0t = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -56,10 +56,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.b177587c.js"),
-						import("../_app/immutable/entry/app.2fcb44b9.js")
+						import("../_app/immutable/entry/start.a895e3dd.js"),
+						import("../_app/immutable/entry/app.d3a213ee.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1kv2f9b.element, {
+						kit.start(app, __sveltekit_v7nw0t.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
