deploy: d94ee8a14c06750828402c6eac33f27304440740

--- a/donate/crypto.html
+++ b/donate/crypto.html
@@ -7,18 +7,18 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.a895e3dd.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.1b7f35eb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.24fa1c4e.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.49b2aa7d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.580b8ce6.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.a2c689d6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.d3a213ee.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.cf57c859.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.e4275cec.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.5d95ae10.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.18e7e120.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.727ee4ec.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-crypto-page.svelte.410e46c3.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.1b0b4a22.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.fe411c31.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-crypto-page.svelte.73a29a7c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/link.c7d5d64f.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/crypto"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/crypto"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/link.a34bc921.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/crypto"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/crypto"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
 	</head>
 	<body>
 		<div>
@@ -46,7 +46,7 @@
 			
 			<script>
 				{
-					__sveltekit_v7nw0t = {
+					__sveltekit_kjlxrv = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -55,10 +55,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.a895e3dd.js"),
-						import("../_app/immutable/entry/app.d3a213ee.js")
+						import("../_app/immutable/entry/start.49b2aa7d.js"),
+						import("../_app/immutable/entry/app.e4275cec.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_v7nw0t.element, {
+						kit.start(app, __sveltekit_kjlxrv.element, {
 							node_ids: [0, 2, 6],
 							data,
 							form: null,
