--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<link href="./_app/immutable/assets/_layout.941d0f95.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.49b2aa7d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4ed25027.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.580b8ce6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a2c689d6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.aa49f5d9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.e4275cec.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.5d95ae10.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.b86b06db.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.6f32b6fa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.cbe5cda7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.1b0b4a22.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.38da66c3.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.cbd74dbb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.a34bc921.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
 	</head>
@@ -92,7 +92,7 @@
 			
 			<script>
 				{
-					__sveltekit_kjlxrv = {
+					__sveltekit_2katei = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -101,10 +101,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.49b2aa7d.js"),
-						import("./_app/immutable/entry/app.e4275cec.js")
+						import("./_app/immutable/entry/start.4ed25027.js"),
+						import("./_app/immutable/entry/app.b86b06db.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_kjlxrv.element, {
+						kit.start(app, __sveltekit_2katei.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
