--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.295f7e21.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout.4af3d1f7.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.270582b9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.dd0e0c09.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.cff4bce6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.08ae60b6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.22f3b4ff.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8e8b7cac.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.307461dc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.c8733d54.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.d6854d3a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.6520ffc4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.1d8f47c4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.84144624.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.7ab5bd4e.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
@@ -93,7 +93,7 @@
 			
 			<script>
 				{
-					__sveltekit_ernwf1 = {
+					__sveltekit_824cd1 = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -102,10 +102,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.270582b9.js"),
-						import("./_app/immutable/entry/app.8e8b7cac.js")
+						import("./_app/immutable/entry/start.dd0e0c09.js"),
+						import("./_app/immutable/entry/app.c8733d54.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_ernwf1.element, {
+						kit.start(app, __sveltekit_824cd1.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
