--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 		<link href="./_app/immutable/assets/_layout.4af3d1f7.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.8a032cc4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.d7c4545d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.cff4bce6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.746ff7d7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.06a85e17.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3eb75e24.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.8e0d2ea5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.463b07c0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.346cdf70.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.22eff181.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.bfa7d713.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.1d6e596f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/main.cdbfe6df.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.84144624.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/link.7ab5bd4e.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-4gvw5l_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><!-- HEAD_svelte-4gvw5l_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.bab89b55.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/link.7ab5bd4e.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1iagrm3_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><link rel="preconnect" href="https://lp-russia.org/join"><!-- HEAD_svelte-1iagrm3_END -->
 	</head>
 	<body>
 		<div>
@@ -75,7 +75,7 @@
 </svg><!-- HTML_TAG_END --></p>
 <p class="svelte-gy8nzu">Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!</p>
 
-<nav><a href="https://lp-russia.org/join" class=" svelte-nd5pfo" target="_self" rel="prefetch">Вступить
+<nav><a href="https://lp-russia.org/join" class=" svelte-nd5pfo" target="_blank" rel="">Вступить
 </a>
 	<a href="./donate" class=" svelte-nd5pfo" target="_self" rel="">Помочь деньгами
 </a>
@@ -94,7 +94,7 @@
 			
 			<script>
 				{
-					__sveltekit_1eo1tir = {
+					__sveltekit_11qu2k4 = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -103,10 +103,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.8a032cc4.js"),
-						import("./_app/immutable/entry/app.3eb75e24.js")
+						import("./_app/immutable/entry/start.d7c4545d.js"),
+						import("./_app/immutable/entry/app.463b07c0.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1eo1tir.element, {
+						kit.start(app, __sveltekit_11qu2k4.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
