--- a/donate/long.html
+++ b/donate/long.html
@@ -8,25 +8,27 @@
 		<link href="../_app/immutable/assets/_layout.4af3d1f7.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.49e12903.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.8a032cc4.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.d7c4545d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.cff4bce6.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.746ff7d7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.06a85e17.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.3eb75e24.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.8e0d2ea5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.463b07c0.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.346cdf70.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.22eff181.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.bfa7d713.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/main.cdbfe6df.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.7ccb9452.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.b74da8a9.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/link.7ab5bd4e.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.1ff60555.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.424dec67.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/link.7ab5bd4e.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END --><!-- HEAD_svelte-1oesfl4_START --><link rel="preconnect" href="https://www.patreon.com/spblpr"><link rel="preconnect" href="https://boosty.to/spblpr"><!-- HEAD_svelte-1oesfl4_END -->
 	</head>
 	<body>
 		<div>
 
 
 <div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by">
+
+
 <h1 class="svelte-1s5foe9">Регулярное пожертвование</h1>
 
 <ul><li><a href="https://www.patreon.com/spblpr" class=" svelte-nd5pfo" target="_blank" rel="">Patreon
@@ -55,7 +57,7 @@
 			
 			<script>
 				{
-					__sveltekit_1eo1tir = {
+					__sveltekit_11qu2k4 = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -64,10 +66,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.8a032cc4.js"),
-						import("../_app/immutable/entry/app.3eb75e24.js")
+						import("../_app/immutable/entry/start.d7c4545d.js"),
+						import("../_app/immutable/entry/app.463b07c0.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1eo1tir.element, {
+						kit.start(app, __sveltekit_11qu2k4.element, {
 							node_ids: [0, 2, 7],
 							data,
 							form: null,
