deploy: 827cc8f2cdf2e180906b388e1694f798b1746438

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.00a5b1a9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.98e27e75.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.5f8082b2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3db628e5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f9e48026.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.54f8f6c9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.d3a54bbc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d2c1364d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.bcd7dd8d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.e2f1faba.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.18f7da7a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.9577806e.js">
@@ -50,7 +50,7 @@
 			
 			<script>
 				{
-					__sveltekit_1mpni4a = {
+					__sveltekit_1ip6spi = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -59,10 +59,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.00a5b1a9.js"),
-						import("./_app/immutable/entry/app.54f8f6c9.js")
+						import("./_app/immutable/entry/start.98e27e75.js"),
+						import("./_app/immutable/entry/app.d2c1364d.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1mpni4a.element, {
+						kit.start(app, __sveltekit_1ip6spi.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
