--- a/donate/crypto.html
+++ b/donate/crypto.html
@@ -7,19 +7,19 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.00a5b1a9.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.98e27e75.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.5f8082b2.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.3db628e5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.f9e48026.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.54f8f6c9.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.d3a54bbc.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d2c1364d.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.bcd7dd8d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e2f1faba.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.18f7da7a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.d402e4ee.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.0cf19d5b.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-crypto-page.svelte.2ac16ede.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/link.e8c468f4.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="http://sveltekit-prerender/donate/crypto"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="donate-preview-link.png"><meta property="og:image:secure_url" content="donate-preview-link.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="http://sveltekit-prerender/donate/crypto"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="donate-preview-link.png"><!-- HEAD_svelte-rjtykx_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/link.e8c468f4.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="http://sveltekit-prerender/donate/crypto"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/donate-preview-link.png"><meta property="og:image:secure_url" content="/donate-preview-link.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="http://sveltekit-prerender/donate/crypto"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/donate-preview-link.png"><!-- HEAD_svelte-rjtykx_END -->
 	</head>
 	<body>
 		<div>
@@ -53,7 +53,7 @@
 			
 			<script>
 				{
-					__sveltekit_1mpni4a = {
+					__sveltekit_1ip6spi = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -62,10 +62,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.00a5b1a9.js"),
-						import("../_app/immutable/entry/app.54f8f6c9.js")
+						import("../_app/immutable/entry/start.98e27e75.js"),
+						import("../_app/immutable/entry/app.d2c1364d.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1mpni4a.element, {
+						kit.start(app, __sveltekit_1ip6spi.element, {
 							node_ids: [0, 2, 6],
 							data,
 							form: null,
